# novatradecore

./: .dockerignore  .mermaid  .pyrightconfig.json  Dockerfile  Locust_2026-05-01-14h15_locustfile.py_http___127.0.0.1_8000_requests.csv  README.md  README_EN.md  architecture.mmd  docker-compose.yml  entrypoint.sh  locustfile.py  manage.py  package-lock.json  package.json  pyproject.toml
config/: urls.py
config/settings/: __init__.py  base.py  development.py  production.py
infra/: hot_migrations.sql
novatradecore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_v1.py  test_trade_endpoint.py
trades/: admin.py  apps.py
trades/api/: dependencies.py  v1.py
trades/api/endpoints/: trades.py
trades/migrations/: 0001_initial.py  0002_add_hot_index_trades.py
trades/models/: trade.py
trades/schemas/: requests.py  responses.py  trades.py
trades/services/: bilk_ingestor.py  risk_engine.py  risk_enjine.py
