[project]
name = "novatradecore"
version = "1.0.0"
description = "NovaTradeCore — Высокочастотная крипто-риск платформа"
requires-python = ">=3.12,<4.0"
authors = [{name = "Artem Alimpiev", email = "alimpievne@gmail.com"}]
dependencies = [
    "Django==5.0.7",
    "django-nova==0.1.0",
    "uvicorn[standard]==0.30.1",
    "pydantic>=2.8.2,<3.0.0",  # Разрешаем версии выше 2.8.2, но ниже 3.0
    "pydantic-settings>=2.5.2",  # Подняли версию для django-nova
    "sqlmodel==0.0.19",
    "psycopg[binary,pool]==3.1.19",
    "redis==5.0.7",
    "PyJWT==2.8.0",
    "slowapi==0.1.9",
    "structlog==24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "httpx==0.27.0",
    "pyright==1.1.371",
    "ruff==0.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["trades*"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
exclude = ["migrations", ".venv"]

[tool.ruff]
target-version = "py312"
line-length = 120

# Секция для Poetry (если решишь вернуться к нему)
[tool.poetry]
# Она может оставаться пустой или отсутствовать,
# если ты используешь чистый pip
